--- a/src/app/components/promovidos/promovidos.component.html
+++ b/src/app/components/promovidos/promovidos.component.html
@@ -3,12 +3,15 @@
   <div class="container animated fadeIn min600">
 	   <div class="row">
        <div class="col-sm-12">
-           <legend style="color: #ff015d">Promovidos:</legend>
+           <legend style="color: #ff015d">Promovidos:<span style="float: right;font-size:16px;">Total promovidos: {{responsables.length}} <span *ngIf="priv=='0'">de {{usuariopequeno}}</span></span></legend>
        </div>
        <div *ngIf="spin==true" class="mx-auto w-100 p-3" style="margin-left: 20%;margin-top: 13%;">
           <div class="loader mx-auto" *ngIf="spin==true"></div>
         </div>
-        <div class="card col-sm-12 min550" style="border-color: #FF015d; padding: 0px; margin-top: 0%;" *ngIf="responsables!=0 && spin==false">
+        <div class="card col-sm-12 min550" style="border-color: #FF015d; padding: 0px; margin-top: 0%;" *ngIf="responsables==null && priv=='0' && spin==false">
+          <blockquote class="blockquote text-center" style="color: #ff015d;">No se encontraron promovidos hechos por ti.</blockquote>
+        </div>
+        <div class="card col-sm-12 min550" style="border-color: #FF015d; padding: 0px; margin-top: 0%;" *ngIf="responsables!=null && spin==false">
           <table class="table" style="margin-bottom: 0px;">
             <thead style="background-color: #ff015d; color: white;">
               <tr>
@@ -29,7 +32,7 @@
                 <td>{{ responsable.telefono }}</td>
                 <td>{{ responsable.correo }}</td>
                 <td>{{ responsable.seccion }}</td>
-                <td class="text-center"><a class="icon-eye cursorsito margr10" (click)="showmodal(responsable.nombre+' '+responsable.paterno+' '+responsable.materno,responsable);"></a><a class="icon-pencil cursorsito margr10" (click)="showmodal(responsable.nombre+' '+responsable.paterno+' '+responsable.materno,responsable);"></a><a class="icon-bin cursorsito margr10" (click)="showmodal(responsable.nombre+' '+responsable.paterno+' '+responsable.materno,responsable);"></a></td>
+                <td class="text-center"><a class="icon-eye cursorsito margr10" (click)="showmodal(responsable.nombre+' '+responsable.paterno+' '+responsable.materno,responsable);"></a><a class="icon-pencil cursorsito margr10" style="color: #000;" [routerLink]="['/editprom',responsable.id]"></a><a *ngIf="priv=='1'||priv=='2'"class="icon-bin cursorsito margr10" (click)="eliminar(responsable.id)"></a></td>
               </tr>
             </tbody>
           </table>
@@ -55,10 +58,13 @@
         </nav>
         <div class="col align-self-end">
    </div>
-   <div class="col-sm-12 min550" style="padding: 0px; margin-top: 0%; margin-bottom: 20px;" *ngIf="spin==false">
+   <div class="col-sm-12 min550" style="padding: 0px; margin-top: 0%; margin-bottom: 20px;" *ngIf="spin==false && (priv=='1'||priv=='2')">
      <iframe class="min550 framesec" border="0" frameborder="0" framespacing="0" src="http://mapinfomich.com/Promovidos/mapademandas.php?id=54" ></iframe>
    </div>
-   <div class="col-sm-12 min550" [chart]="chart" style="padding: 0px; margin-top: 0%; margin-bottom: 20px;" *ngIf="spin==false">
+   <div class="col-sm-6 min550" [chart]="chart" style="padding: 0px; margin-top: 0%; margin-bottom: 20px;" *ngIf="spin==false && (priv=='1'||priv=='2')" >
+
+   </div>
+   <div class="col-sm-6 min550" [chart]="chartpie" style="padding: 0px; margin-top: 0%; margin-bottom: 20px;" *ngIf="spin==false && (priv=='1'||priv=='2')">
 
    </div>
       </div>
@@ -87,10 +93,6 @@
             <div class="col-sm-6">
               <dt class="col-sm-12">Edad:</dt>
               <dd class="col-sm-12">{{edad}}</dd>
-            </div>
-            <div class="col-sm-6">
-              <dt class="col-sm-12">Clv. Elector:</dt>
-              <dd class="col-sm-12">{{elector}}</dd>
             </div>
             <div class="col-sm-6">
               <dt class="col-sm-12">Sección:</dt>
