--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,10 +15,13 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/promovidos']">Promovidos</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li *ngIf="value=='2' || value=='1'" class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/responsables']">Responsables</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li *ngIf="value=='1'" class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/imprimir']">Imprimir</a>
+      </li>
+      <li *ngIf="value=='1'" class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/usuarios']">Usuarios</a>
       </li>
     </ul>
