--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="animated fadeIn">
   <app-navbar></app-navbar>
-  <img src="../assets/img/logo-Daniela.png" class="homelogo img-thumbnail rounded mx-auto d-block img-fluid" alt="Daniela de los Santos">
+  <img src="../assets/img/logo-Daniela.png" style="width: 50%;" class="homelogo img-thumbnail rounded mx-auto d-block img-fluid" alt="Daniela de los Santos">
 </div>
