--- a/src/app/components/promover/promover.component.html
+++ b/src/app/components/promover/promover.component.html
@@ -98,10 +98,16 @@
 </div>
 <div class="col-md-6 mb-3">
   <label for="validationCustom05">Colonia</label>
-  <select class="form-control" id="colonia" (focus)="cambiarf(colonia)" [ngClass]="{invalid:errorin == 'colonia'}" (change)="changesec(colonia.value)" #colonia name="colonia" ngModel aria-describedby="inputGroupPrepend" required>
+  <!--<select class="form-control" id="colonia" (focus)="cambiarf(colonia)" [ngClass]="{invalid:errorin == 'colonia'}" (change)="changesec(colonia.value)" #colonia name="colonia" ngModel aria-describedby="inputGroupPrepend" required>
     <option value="0">Seleccione sección</option>
     <option *ngFor="let colonita of colonias" value="{{colonita.CLASIFICACION + ' ' + colonita.COLONIA}}">{{ colonita.COLONIA + " " + colonita.CLASIFICACION }}</option>
-  </select>
+  </select>-->
+  <input class="form-control" autocomplete="off" [(ngModel)]="searchText" id="colonia" (focus)="cambiarf(colonia)" (keydown)="yanoloquiero($event)" [ngClass]="{invalid:errorin == 'colonia'}" #colonia name="colonia" ngModel aria-describedby="inputGroupPrepend" required />
+  <ul class="listita">
+    <li *ngFor="let c of colonias | filter : searchText" (click)="setear(c.CLASIFICACION + ' ' + c.COLONIA)">
+      {{c.CLASIFICACION +" "+ c.COLONIA}}
+    </li>
+  </ul>
   <div [ngClass]="{show:errorvac == 'colonia'}" id="errcolonia" class="invalid-feedback">
     La colonia no puede estar vacio.
   </div>
@@ -203,7 +209,12 @@
 </div>
 <div class="col-md-4 mb-3">
   <label for="validationCustom05">Responsable de Red</label>
-  <input type="text" class="form-control" class="form-control" id="red" (focus)="cambiarf(red)" [ngClass]="{invalid:errorin == 'red'}" #respred name="respred" ngModel placeholder="Responsable de red"  required>
+  <input type="text" autocomplete="off" [(ngModel)]="searchTextresp" (focus)="cambiarf(red)" (keydown)="yanoloquieroresp($event)" class="form-control" id="red"  [ngClass]="{invalid:errorin == 'red'}" #respred name="respred" ngModel placeholder="Responsable de red"  required>
+  <ul class="listitaresp">
+    <li *ngFor="let c of red | filterresp : searchTextresp" (click)="setearresp(c.respred)">
+      {{c.respred}}
+    </li>
+  </ul>
   <div [ngClass]="{show:errorvac == 'red'}" id="errred" class="invalid-feedback">
     El responsable de red no puede estar vacio.
   </div>
